--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,6 @@ img {
 
 .menu-link,
 .contacts-link {
-  /* display: block; */
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -159,8 +158,24 @@ img {
 }
 
 .menu-link.current {
+  position: relative;
   color: var(--accent-color);
 }
+
+.menu-link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: -1px;
+
+  width: 100%;
+  height: 4px;
+
+  background: #2196f3;
+  border-radius: 2px;
+}
+
 /* footer icons */
 .contacts-item {
   display: flex;
@@ -283,9 +298,26 @@ img {
 }
 
 .work-item {
+  position: relative;
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
+}
+
+.work-title {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background: rgba(47, 48, 58, 0.8);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
 }
 
 /* team */
@@ -460,11 +492,47 @@ img {
   text-decoration: none;
   color: inherit;
 }
+.examples-thumb {
+  position: relative;
+}
+.exemples-text {
+  position: absolute;
+  width: 322px;
+  height: 168px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  opacity: 0;
+
+  font-size: 18px;
+  line-height: 1.56;
+  color: #ffffff;
+}
+.examples-thumb::before {
+  display: inline-block;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+}
 
 .examples-link:hover,
 .examples-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.examples-link:hover .exemples-text,
+.examples-link:focus .exemples-text {
+  opacity: 1;
+}
+
+.examples-link:hover .examples-thumb::before,
+.examples-link:focus .examples-thumb::before {
+  opacity: 1;
 }
 
 .examples-card {
@@ -593,6 +661,7 @@ address {
 }
 
 .backdrop.is-hidden {
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
 }
