--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ img {
 .menu-link,
 .contacts-link {
   display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -151,10 +152,8 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-}
 
-.contacts-link {
-  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link.current {
@@ -167,8 +166,8 @@ img {
   display: block;
   position: absolute;
   right: 0;
-  bottom: -1px;
-
+  /* bottom: -1px; */
+  top: 77px;
   width: 100%;
   height: 4px;
 
@@ -176,7 +175,6 @@ img {
   border-radius: 2px;
 }
 
-/* footer icons */
 .contacts-item {
   display: flex;
   align-items: center;
@@ -194,10 +192,10 @@ img {
   color: var(--accent-color);
 }
 
-.contacts-icon:hover,
+/* .contacts-icon:hover,
 .contacts-icon:focus {
   fill: var(--accent-color);
-}
+} */
 
 /* hero */
 .hero {
@@ -386,13 +384,16 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background-color: var(--primary-white-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-icon {
   width: 20px;
   height: 20px;
   fill: var(--icons-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* footer social-link */
@@ -450,12 +451,16 @@ img {
 
   border-radius: 4px;
   background-color: #fff;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-icon {
   width: 106px;
   height: 60px;
   fill: var(--icons-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-link:hover,
@@ -491,38 +496,47 @@ img {
   display: block;
   text-decoration: none;
   color: inherit;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .examples-thumb {
   position: relative;
+  overflow: hidden;
 }
+
+.examples-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples-link:hover .examples-overlay,
+.examples-link:focus .examples-overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+
 .exemples-text {
   position: absolute;
   width: 322px;
   height: 168px;
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   font-size: 18px;
   line-height: 1.56;
   color: #ffffff;
-}
-.examples-thumb::before {
-  display: inline-block;
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-}
-
-.examples-link:hover,
-.examples-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .examples-link:hover .exemples-text,
@@ -530,13 +544,9 @@ img {
   opacity: 1;
 }
 
-.examples-link:hover .examples-thumb::before,
-.examples-link:focus .examples-thumb::before {
-  opacity: 1;
-}
-
 .examples-card {
   flex-basis: calc(100% / 3 - 30px);
+  overflow: hidden;
 
   margin-top: 30px;
   margin-left: 30px;
@@ -563,8 +573,15 @@ img {
   line-height: 1.88;
 }
 
+.examples-link:hover,
+.examples-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 /* button */
 .button {
+  position: relative;
   border-radius: 4px;
   border: 0;
   padding: 6px 22px;
@@ -577,7 +594,12 @@ img {
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .hero .button {
   padding: 11px 32px;
   display: inline-block;
@@ -658,12 +680,18 @@ address {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.8);
 }
 
 .modal {
@@ -679,8 +707,12 @@ address {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-close-btn {
   position: absolute;
   top: 8px;
