--- a/css/style.css
+++ b/css/style.css
@@ -681,17 +681,17 @@ address {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
   pointer-events: none;
-  visibility: hidden;
+  /* visibility: hidden; */
+  opacity: 0;
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.8);
+  transform: translate(-50%, -50%) scale(1.1);
 }
 
 .modal {
@@ -710,7 +710,7 @@ address {
 
   transform: translate(-50%, -50%) scale(1);
 
-  transition: transform 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
