--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,8 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 63px 24px;
+  overflow: auto;
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translateY(100%);
@@ -671,23 +673,27 @@ address {
   color: var(--primary-white-color);
 }
 
-/* modal window */
+/* backdrop */
 
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  pointer-events: none;
-  /* visibility: hidden; */
   opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
 
 .backdrop.is-hidden .modal {
@@ -720,10 +726,10 @@ address {
   display: flex;
   width: 30px;
   height: 30px;
-
+  padding: 0;
   justify-content: center;
   align-items: center;
-  background: #ffffff;
+  background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
