--- a/css/style.css
+++ b/css/style.css
@@ -510,40 +510,20 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
   overflow: auto;
-  background-color: rgba(33, 150, 243, 0.9);
-
   transform: translateY(100%);
-  opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.examples-link:hover .examples-overlay,
-.examples-link:focus .examples-overlay {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-.exemples-text {
-  position: absolute;
-  width: 322px;
-  height: 168px;
-
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
   color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-link:hover .exemples-text,
-.examples-link:focus .exemples-text {
-  opacity: 1;
+.examples-link:hover .examples-overlay,
+.texamples-link:focus .examples-overlay {
+  transform: translateY(0%);
 }
 
 .examples-card {
